# l6e-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  data.json  pyproject.toml
.claude/: CLAUDE.md
.cursor/: mcp.json
.cursor/rules/: l6e-budget-enforcement.mdc
.github/workflows/: coverage-comment.yml  mypy.yml  publish-l6e-mcp.yml  pytest.yml  ruff.yml
.openclaw/: AGENTS.md
.windsurf/rules/: l6e-budget-enforcement.md
clawhub/: README.md  clawhub.json  instructions.md
docs/: local-estimate-only-enforcement.md  mcp-setup-claude-code.md  mcp-setup-cursor.md  mcp-setup-windsurf.md
docs-site/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs-site/docs/: intro.md  prompt-guide.md
docs-site/docs/concepts/: calibration.md  cloud-api.md  cloud-sync.md  local-estimate-only.md
docs-site/docs/setup/: claude-code.md  cursor.md  openclaw.md  windsurf.md
docs-site/src/css/: custom.css
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_54ffe50def4a6d18_authorization_py.html  z_54ffe50def4a6d18_calibration_cache_py.html  z_54ffe50def4a6d18_exactness_py.html  z_54ffe50def4a6d18_remote_authorize_py.html  z_54ffe50def4a6d18_session_report_worker_py.html  z_54ffe50def4a6d18_status_telemetry_py.html  z_5d1fcb93aca3f1c3_exactness_py.html  z_5d1fcb93aca3f1c3_mode_coverage_py.html  z_9fda441eeeaa389a__connection_py.html  z_9fda441eeeaa389a__migrations_py.html  z_9fda441eeeaa389a__serialization_py.html  z_9fda441eeeaa389a_calls_py.html  z_9fda441eeeaa389a_diagnostics_py.html  z_9fda441eeeaa389a_schema_py.html  z_9fda441eeeaa389a_sessions_py.html  z_9fda441eeeaa389a_summary_py.html  z_b0842ebc485155aa___init___py.html  z_b0842ebc485155aa_anthropic_sync_py.html  z_b0842ebc485155aa_cli_py.html  z_b0842ebc485155aa_config_py.html  z_b0842ebc485155aa_outbox_py.html  z_b0842ebc485155aa_overhead_py.html  z_b0842ebc485155aa_server_py.html  z_b0842ebc485155aa_session_store_py.html
src/l6e_mcp/: __init__.py  anthropic_sync.py  cli.py  config.py  outbox.py  overhead.py  server.py  session_store.py
src/l6e_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/l6e_mcp/calibration/: __init__.py  config.py
src/l6e_mcp/contracts/: __init__.py  correlation_envelope.py  exactness.py  mode_coverage.py  usage_report.py
src/l6e_mcp/core/: __init__.py  authorization.py  calibration_cache.py  exactness.py  reconciliation.py  remote_authorize.py  session_report_worker.py  status_telemetry.py
src/l6e_mcp/integrations/: __init__.py
src/l6e_mcp/integrations/litellm/: __init__.py  cursor_normalizer.py  webhook_ingress.py
src/l6e_mcp/litellm_proxy/: __init__.py  callback_server.py  config.yaml  cursor_compat.py
src/l6e_mcp/rules/: windsurf.md
src/l6e_mcp/store/: __init__.py  _connection.py  _migrations.py  _serialization.py  calls.py  diagnostics.py  repositories.py  schema.py  sessions.py  summary.py
src/l6e_mcp/tools/: __init__.py  calibration_generator.py  hosted_edge_reconcile.py
src/l6e_mcp/transport/: __init__.py
src/l6e_mcp/transport/http/: __init__.py  unmatched_usage.py
tests/: conftest.py  test_anthropic_sync.py  test_calibration.py  test_callback_server.py  test_callback_server_fallback_gating.py  test_config.py  test_cursor_compat.py  test_exactness_states.py  test_fail_open.py  test_manual_calibration.py  test_mode_coverage.py  test_model_override.py  test_outbox.py  test_projection_lag.py  test_remote_authorize.py  test_server.py  test_server_fallback_modes.py  test_session_store.py  test_timeout_and_store_fixes.py
tests/unit/: test_calibration_cache.py  test_calibration_config.py  test_call_repository.py  test_cli.py  test_diagnostics_repository.py  test_migrations.py  test_mode_coverage.py  test_repositories.py  test_serialization.py  test_session_report_worker.py  test_session_repository.py  test_status_telemetry.py  test_webhook_ingress.py
