[project]
name = "l6e-mcp"
version = "0.7.1"
description = "Make your AI coding agent cost-efficient. Budget enforcement for Cursor, Claude Code, Openclaw, & any MCP compatible client."
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.11"
dependencies = [
    "l6e>=0.2.5,<=0.3.0",
    "fastmcp==3.1.1",
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27.0",
    "mypy>=1.10",
    "ruff>=0.4",
]

[project.scripts]
l6e-mcp = "l6e_mcp.server:main"

[project.urls]
Homepage = "https://github.com/l6e-ai/l6e-mcp"
Repository = "https://github.com/l6e-ai/l6e-mcp"
Documentation = "https://docs.l6e.ai"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
relative_files = true

[tool.coverage.report]
show_missing = true

[tool.mypy]
python_version = "3.11"
files = ["src"]
exclude = ["tests/"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
